--- a/portfolio.css
+++ b/portfolio.css
@@ -69,3 +69,21 @@ body{
 .box-6{
     background-blend-mode:revert-layer;
 }
+
+
+/*Media-queries  */
+@media screen and (max-width:1024px){
+    .container{
+        flex-direction:column;
+        padding-block:20px;
+    }
+    .gallery{
+        width:100%;
+        padding-inline:12px;
+        grid-auto-rows: 220px;
+    }
+    .box{
+        grid-row:span 1;
+        grid-column:span 3;
+    }
+}
